--- a/.github/workflows/formatter.yaml
+++ b/.github/workflows/formatter.yaml
@@ -4,13 +4,12 @@ on:
     branches:
       - main
 jobs:
-  build:
+  format-checker:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: "17.3.0"
-          cache: "npm"
       - run: npm i -g prettier
       - run: prettier --check .
