--- a/.github/workflows/flt.yaml
+++ b/.github/workflows/flt.yaml
@@ -13,3 +13,9 @@ jobs:
           node-version: "17.3.0"
       - run: npm i -g prettier
       - run: prettier --check .
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: risedle/setup-dapptools@v2
+      - run: dapp build
