Add github update

--- a/.github/workflows/flt.yaml
+++ b/.github/workflows/flt.yaml
@@ -18,4 +18,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: risedle/setup-dapptools@v2
+      - run: dapp update
       - run: dapp build
