--- a/.github/workflows/flt.yaml
+++ b/.github/workflows/flt.yaml
@@ -4,15 +4,16 @@ on:
     branches:
       - main
 jobs:
-  format-checker:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: "17.3.0"
-      - run: npm i -g prettier
+      - run: npm i -g prettier solhint
       - run: prettier --check .
+      - run: solhint "src/**/*.sol"
   build:
     runs-on: ubuntu-latest
     steps:
