--- a/.github/workflows/flt.yaml
+++ b/.github/workflows/flt.yaml
@@ -18,6 +18,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: risedle/setup-dapptools@v2
+      - uses: risedle/setup-dapptools@v3
+        with:
+          solc: "solc_0_8_11"
       - run: dapp update
       - run: dapp build
