--- a/.github/workflows/flt.yaml
+++ b/.github/workflows/flt.yaml
@@ -4,12 +4,24 @@ on:
     branches:
       - main
 jobs:
-  format-checker:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: "17.3.0"
-      - run: npm i -g prettier
+      - run: npm i -g prettier solhint
       - run: prettier --check .
+      - run: solhint "src/**/*.sol"
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: risedle/setup-dapptools@v4
+        with:
+          solc: "solc_0_8_11"
+      - run: dapp update
+      - run: dapp build
+        env:
+          DAPP_SOLC_VERSION: 0.8.11
