--- a/.github/workflows/flt.yaml
+++ b/.github/workflows/flt.yaml
@@ -17,7 +17,7 @@ jobs:
       - run: npm i -g prettier solhint
       - run: prettier --check .
       - run: solhint "src/**/*.sol"
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -25,6 +25,7 @@ jobs:
         with:
           solc: "solc_0_8_11"
       - run: dapp update
-      - run: dapp build
+      - run: dapp test --rpc -v
         env:
           DAPP_SOLC_VERSION: 0.8.11
+          ETH_RPC_URL: ${{ secrets.ETH_RPC_URL }}
