--- a/.dapprc.example
+++ b/.dapprc.example
@@ -1,11 +1,20 @@
 # Set solidity version
 export DAPP_SOLC_VERSION=0.8.11
 
-# To surpress $(dapp remappings) error
-export DAPP_REMAPPINGS=""
-
 # Activate the optimizer
 export DAPP_BUILD_OPTIMIZE=1
 
 # RPC URL
 export ETH_RPC_URL=
+
+if [ "$CHAIN" == "ethereum" ]
+then
+  export ETH_RPC_URL=
+  export DAPP_REMAPPINGS="chain/=src/test/ethereum/"
+fi
+
+if [ "$CHAIN" == "arbitrum" ]
+then
+  export ETH_RPC_URL=
+  export DAPP_REMAPPINGS="chain/=src/test/arbitrum/"
+fi
